--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -58,11 +58,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
+    "\n",
+    "  # Check to see if both strings are valid or if strings are the same lenght. \n",
+    "  # If not, will return False\n",
+    "  if word_a.isalpha() == False and word_b.isalpha() == False:\n",
+    "    print('Both words are not strings')\n",
+    "    return False\n",
+    "  elif word_a.isalpha() == False and word_b.isalpha() == True:\n",
+    "    print('First word is not a string')\n",
+    "    return False\n",
+    "  elif word_a.isalpha() == True and word_b.isalpha() == False:\n",
+    "    print('Second word is not a string')\n",
+    "    return False\n",
+    "  elif len(word_a) != len(word_b):\n",
+    "    print('Words are not the same length. Not anagram')\n",
+    "    return False\n",
+    "  \n",
+    "  # Convert word into all lower case and sort it alphabetically\n",
+    "  word_a_sorted = sorted(word_a.lower())\n",
+    "  word_b_sorted = sorted(word_b.lower())\n",
+    "\n",
+    "  # Loop through both sorted arrays and compare if the letters are the same. If not, \n",
+    "  # will return False. If it loops through whole array with no dissimilar letters, will\n",
+    "  # return True\n",
+    "\n",
+    "  i = 0\n",
+    "  while i < len(word_a_sorted):\n",
+    "    if word_a_sorted[i] != word_b_sorted[i]:\n",
+    "      return False\n",
+    "    i += 1\n",
+    "\n",
+    "  return True\n",
+    "\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
@@ -70,18 +113,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Words are not the same length. Not anagram\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -103,6 +175,41 @@
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
+    "\n",
+    "  # Check to see if both strings are valid or if strings are the same lenght. \n",
+    "  # If not, will return False\n",
+    "  if word_a.isalpha() == False and word_b.isalpha() == False:\n",
+    "    print('Both words are not strings')\n",
+    "    return False\n",
+    "  elif word_a.isalpha() == False and word_b.isalpha() == True:\n",
+    "    print('First word is not a string')\n",
+    "    return False\n",
+    "  elif word_a.isalpha() == True and word_b.isalpha() == False:\n",
+    "    print('Second word is not a string')\n",
+    "    return False\n",
+    "  elif len(word_a) != len(word_b):\n",
+    "    print('Words are not the same length. Not anagram')\n",
+    "    return False\n",
+    "  \n",
+    "  if is_case_sensitive == True:\n",
+    "    # Sort words alphabetically; case sensitive\n",
+    "    word_a_sorted = sorted (word_a)\n",
+    "    word_b_sorted = sorted (word_b)\n",
+    "  else:\n",
+    "    # Convert word into all lower case and sort it alphabetically\n",
+    "    word_a_sorted = sorted(word_a.lower())\n",
+    "    word_b_sorted = sorted(word_b.lower())\n",
+    "\n",
+    "  # Loop through both sorted arrays and compare if the letters are the same. If not, \n",
+    "  # will return False. If it loops through whole array with no dissimilar letters, will\n",
+    "  # return True\n",
+    "  i = 0\n",
+    "  while i < len(word_a_sorted):\n",
+    "    if word_a_sorted[i] != word_b_sorted[i]:\n",
+    "      return False\n",
+    "    i += 1\n",
+    "\n",
+    "  return True\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -139,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-learner",
+   "display_name": "python-env",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
