Removed testing code from file and resubmit assignment 2

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -302,27 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "3TYo0-1SDLrd"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test it out on the data file we read in and make sure the size is what we expect i.e., 60\n",
     "# Your output for the first file should be 60\n",
-    "data_min = patient_summary(all_paths[0], 'min')\n",
-    "print(len(data_min))"
+    "data_min = patient_summary(all_paths[0], 'min')"
    ]
   },
   {
@@ -380,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "id": "_svDiRkdIwiT"
    },
@@ -404,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {
     "id": "LEYPM5v4JT0i"
    },
@@ -426,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
